--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filmoteka</title>
+    <link rel="stylesheet" href="./sass/main.scss" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -12,35 +14,17 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./sass/main.scss" />
+    <title>Filmoteka</title>
   </head>
   <body>
-    <header class="header">
-      <div class="navigation__container">
-        <a href="" class="logo">
-          <svg class="logo__svg icon-film">
-            <use href="./images/icons.svg#icon-film"></use>
-          </svg>
-          <span class="logo__text">Filmoteka</span>
-        </a>
-        <nav class="navigation">
-          <ul class="menu list">
-            <li class="menu__item">
-              <a href="" class="link current menu__link menu__link-home"
-                >HOME</a
-              >
-            </li>
-            <li class="menu__item">
-              <a href="" class="link menu__link menu__link-library"
-                >MY LIBRARY</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <include src="./partials/header.html"></include>
+    <main>
+      <include src="./partials/movie-list.html"></include>
+    </main>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/modal.html"></include>
   </body>
 </html>
